--- a/applications-crud/frontend/assets/css/loading.css
+++ b/applications-crud/frontend/assets/css/loading.css
@@ -1,21 +1,21 @@
- #loading-screen {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, 0.925);
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   z-index: 9999;
-   flex-direction: column;
-   color: white;
-   display: none;
-   /* Oculto por defecto */
- }
+/* Pantalla de carga */
+#loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.925);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 9999;
+  color: white;
+}
 
- .spinner {
-   width: 3rem;
-   height: 3rem;
- }
+/* Spinner de carga */
+.spinner {
+  width: 3rem;
+  height: 3rem;
+}
